package com.dilshodlatipov.pdfbot.apppdfbot.enums;

public enum BotStatus {
    PAGE_ZERO,
    LANGUAGE,
    IMAGES_ADDING,
    TEXT_CONVERT,
    CHOOSING_FONT,
    MERGE,
    WAITING
}
