package com.dilshodlatipov.pdfbot.apppdfbot.enums;

public enum DocumentStatus {
    DRAFT,
    PROCESSED
}
