package com.dilshodlatipov.pdfbot.apppdfbot.enums;

public enum DocumentType {
    IMAGES,
    TEXT,
    MERGE
}
